--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 volumes:
-  rpishare_data: {}
+  pi_share: {}
 
 services:
   rpishare:
@@ -20,7 +20,7 @@ services:
       - 445:445/udp
     hostname: rpi-samba
     volumes:
-      - rpishare_data:/share/data
+      - pi_share:/share/data
       - /usr/share/zoneinfo/Europe/Berlin:/etc/localtime
     command: -u "user:password" -u "user2:password" -s "rpishare:/share/data:rw:user,user2" -s "Documents (readonly):/share/data/documents:ro:user,user2"
     restart: unless-stopped
