--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    container_name: rpishare
+    container_name: pishare
     restart: always
     ports:
       - 137:137/tcp
@@ -22,5 +22,5 @@ services:
     volumes:
       - pi_share:/share/data
       - /usr/share/zoneinfo/Europe/Berlin:/etc/localtime
-    command: -u "user:password" -u "user2:password" -s "rpishare:/share/data:rw:user,user2" -s "Documents (readonly):/share/data/documents:ro:user,user2"
+    command: -u "user:password" -u "user2:password" -s "pishare:/share/data:rw:user,user2" -s "Documents (readonly):/share/data/documents:ro:user,user2"
     restart: unless-stopped
